# boligascraper

./: .gitignore  Dockerfile  Makefile  README.md  Scrape Boliga.ipynb  cleaned.csv  pyproject.toml  requirements.txt  setup.py
BoligaScraper/: helper.py  main.py
BoligaScraper/data/: boliga.csv  boliga.xlsx
data/: boliga.csv  boliga.xlsx
docs/cron/: crontab  scraper.sh
scripts/: extract.py  load_send.py  make_baseline.py  make_clean.py  make_email.py  make_mails.py  make_raw.py  make_report.py  print.py  run_extract_transform.py  run_scraping.py  send_email.py
src/: boliga_cleaner.py  boliga_reader.py  compose.py  config.py  helper.py  main.py  transform.py
src/agent/: archive.py  baseline.py  boliga.py  clean.py  email_util.py  model.py  report.py  scrape.py  transform.py  utils.py
src/baseline/: __init__.py  compose.py  utils.py
src/boliga/: __init__.py  boliga.py  dataclass.py
src/clean/: __init__.py  compose.py  dataframes.py  utils.py
src/composer/: __init__.py  compose.py
src/dfutils/: geo.py
src/etl/: __init__.py  extract.py  extract_estate.py  extract_sold.py  load.py  transform.py
src/geo/: geo.py
src/helper/: emails.py  helper.py
src/mails/: __init__.py  compose.py  emails.py  html.py
src/raw/: __init__.py  api.py  archive.py  compose.py  estate.py  list.py  results.py  sold.py  utils.py
src/report/: __init__.py  compose.py  emails.py  html.py  utils.py
src/reporting/: __main__.py  emails.py
src/scrape/: archive.py  boliga_api.py  folder_archive.py  schema.py  scraper.py
src/scraper/: __init__.py  __main__.py  boliga.py  cleaner.py  helper.py  reader.py
static/: stations.csv  zipcode.csv  zipcodes.csv
tests/: test_api.py  test_archive.py  test_transform.py  test_utils.py
(+15 files in other folders)
