[tool.poetry]
name = "boliga-scraper"
version = "0.1.0"
description = ""
authors = ["Henrik Christoffersen"]

packages = [
    { include = "raw", from = "src" },
    { include = "clean", from = "src" },
    { include = "transform", from = "src" },
    { include = "utils", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.2.3"
geopy = "^2.1.0"
pretty-html-table = "^0.9.dev0"
requests = "^2.25.1"
bs4 = "^0.0.1"
minify-html = "^0.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
