[tool.poetry]
name = "boliga-scraper"
version = "0.1.0"
description = ""
authors = ["Henrik Christoffersen"]

packages = [
    { include = "agent", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.2.3"
pretty-html-table = "^0.9.dev0"
requests = "^2.25.1"
pandasql = "^0.7.3"
pytest = "^6.2.5"
pyarrow = "^6.0.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
